# godfather-backend

./: .env
godfather-backend/: .gitignore  Cargo.toml  godfather.db
godfather-backend/migrations/: 20250821161253_create_users_table.sql  20250822225832_fix_user_table_comment.sql  20250824210748_create_sessions_table.sql  20250824210814_create_machines_table.sql  20250831222011_update_machines_table1.sql  20250904170221_add_lifetime_hours.sql
godfather-backend/src/: db.rs  handlers.rs  main.rs  routes.rs  state.rs
godfather-backend/src/auth/: jwt.rs
godfather-backend/src/handlers/: admin_handler.rs  auth_handler.rs  balance_handler.rs  machine_handler.rs  mod.rs  profile_handler.rs  session_handler.rs  user_handler.rs
godfather-backend/src/middleware/: auth.rs
godfather-backend/src/models/: balance.rs  machine.rs  mod.rs  session.rs  user.rs
godfather-backend/src/routes/: api_routes.rs  mod.rs  user_routes.rs
godfather-backend/src/services/: user_service.rs
